--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,9 +23,11 @@ jobs:
 
       - name: Create backup config file
         run: |
+          echo "backup_choice=\"1\"" > backup_config
           echo "backup_dir=\"/tmp/backup\"" > backup_config
           echo "device=\"/dev/sda1\"" >> backup_config  # Mock device for mounting
           echo "data_choices=\"1 3 5\"" >> backup_config  # Simulate file selection
+          echo "encrypt_choice=\"n\"" >> backup_config # Mock encryption choice
   
       - name: Test running the backup manually
         run: |
@@ -38,6 +40,7 @@ jobs:
         run: |
           chmod +x backup.sh
           ./backup.sh
+
           # Check if cron job is added
           crontab -l | grep "backup.sh"
 
@@ -51,7 +54,6 @@ jobs:
 
       - name: Test backup encryption
         run: |
-          echo "y" | ./backup.sh  # Assuming 'y' input will trigger encryption
           if [ ! -f "/tmp/backup/backup_*.tar.gz.gpg" ]; then
             echo "Backup was not encrypted!"
             exit 1
